GUI-1207: Fix alignment of manual controls in sharing panel

--- a/eucaconsole/static/sass/widgets/s3_sharing_panel.scss
+++ b/eucaconsole/static/sass/widgets/s3_sharing_panel.scss
@@ -33,5 +33,10 @@
     #controls_share_account label {
         white-space: nowrap;
     }
+    #manual-acl-wrapper {
+        .manual-controls {
+            margin-left: 1.6rem;
+        }
+    }
 }
 
